--- a/.env.docker
+++ b/.env.docker
@@ -1,7 +1,8 @@
 # Docker Environment Configuration
-WORKSPACE_ROOT=./workspaces
+SESSION_ROOT=./sessions
 OPENCODE_CONFIG_PATH=./opencode.json
 HOST=0.0.0.0
 PORT=5001
 DEBUG=false
+LOG_LEVEL=INFO
 CORS_ORIGINS=*
