--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,9 @@
 # Production Environment Configuration
-WORKSPACE_ROOT=./workspaces
+SESSION_ROOT=./sessions
 OPENCODE_COMMAND=opencode
 OPENCODE_CONFIG_PATH=./opencode.json
 HOST=0.0.0.0
 PORT=5001
 DEBUG=false
+LOG_LEVEL=INFO
 CORS_ORIGINS=*
-
-# Production deployment settings
-SESSION_ROOT=./sessions
