--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "setup": "npm install -g opencode-ai && npm install && npx playwright install chromium",
+    "setup": "npm install -g opencode-ai && npm install && npx playwright install chromium && npx playwright install-deps",
+    "setup-wsl": "npm install && npx playwright install chromium && npx playwright install-deps",
+    "setup-complete": "npm run setup && wsl sudo npx playwright install-deps",
     "install-browsers": "npx playwright install chromium",
+    "install-deps": "npx playwright install-deps",
     "verify": "opencode --version",
     "check": "python setup_check.py",
     "dev": "python main.py",
