--- a/.env.production
+++ b/.env.production
@@ -5,5 +5,18 @@ OPENCODE_CONFIG_PATH=./opencode.json
 HOST=0.0.0.0
 PORT=5001
 DEBUG=false
+
+# Linux Locale Settings - Static configuration for Unicode handling
+LANG=C.UTF-8
+LC_ALL=C.UTF-8
+
 LOG_LEVEL=INFO
+
+# OpenCode Log Level (DEBUG, INFO, WARN, ERROR)  
+# DEBUG - Most verbose, shows all tool-input-delta and internal OpenCode details
+# INFO - Shows sub-agent activity but includes tool-input-delta noise
+# WARN - Clean output, shows essential info and agent responses (recommended)
+# ERROR - Minimal output, only OpenCode errors
+OPENCODE_LOG_LEVEL=WARN
+
 CORS_ORIGINS=*
