--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,30 @@
 # Environment Configuration Example
 # Copy this file to .env and modify as needed
 
-# Server Configuration
+# Agent Runtime API Configuration
+SESSION_ROOT=./sessions
+OPENCODE_COMMAND=opencode
+OPENCODE_CONFIG_PATH=./opencode.json
 HOST=0.0.0.0
 PORT=5001
 DEBUG=false
 
-# Logging Configuration
-# Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# Linux Locale Settings - Static configuration for Unicode handling
+LANG=C.UTF-8
+LC_ALL=C.UTF-8
+
+# Application Log Level (DEBUG, INFO, WARN, ERROR)
+# DEBUG - Most verbose, shows all application internals and detailed execution
+# INFO - Moderate verbosity, shows key operations and status updates
+# WARN - Shows warnings and errors only
+# ERROR - Shows only errors
 LOG_LEVEL=INFO
 
-# CORS Configuration (comma-separated)
+# OpenCode Log Level (DEBUG, INFO, WARN, ERROR)  
+# DEBUG - Most verbose, shows all tool-input-delta and internal OpenCode details
+# INFO - Shows sub-agent activity but includes tool-input-delta noise
+# WARN - Clean output, shows essential info and agent responses (recommended)
+# ERROR - Minimal output, only OpenCode errors
+OPENCODE_LOG_LEVEL=WARN
+
 CORS_ORIGINS=*
-
-# Session Storage
-SESSION_ROOT=./sessions
-
-# OpenCode Configuration
-# Leave empty to auto-detect
-OPENCODE_COMMAND=
-OPENCODE_CONFIG_PATH=./opencode.json
