--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "setup": "npm install -g opencode-ai && npm install && npx playwright install chromium && npx playwright install-deps",
+    "setup": "sudo npm install -g opencode-ai && npm install && npx playwright install chromium && npx playwright install-deps",
     "install-browsers": "npx playwright install chromium",
     "install-deps": "npx playwright install-deps",
     "verify": "opencode --version",
