--- a/.env.docker
+++ b/.env.docker
@@ -2,15 +2,20 @@
 SESSION_ROOT=./sessions
 OPENCODE_COMMAND=opencode
 OPENCODE_CONFIG_PATH=./opencode.json
+OPENCODE_DIR=./.opencode
 HOST=0.0.0.0
 PORT=5001
-DEBUG=false
 
 # Linux Locale Settings - Static configuration for Unicode handling
 LANG=C.UTF-8
 LC_ALL=C.UTF-8
 
-LOG_LEVEL=INFO
+# Application Log Level (DEBUG, INFO, WARN, ERROR)
+# DEBUG - Most verbose, shows all application internals and detailed execution
+# INFO - Moderate verbosity, shows key operations and status updates
+# WARN - Shows warnings and errors only
+# ERROR - Shows only errors
+LOG_LEVEL=DEBUG
 
 # OpenCode Log Level (DEBUG, INFO, WARN, ERROR)  
 # DEBUG - Most verbose, shows all tool-input-delta and internal OpenCode details
