--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,9 @@
 SESSION_ROOT=./sessions
 OPENCODE_COMMAND=opencode
 OPENCODE_CONFIG_PATH=./opencode.json
+OPENCODE_DIR=./.opencode
 HOST=0.0.0.0
 PORT=5001
-DEBUG=false
 
 # Linux Locale Settings - Static configuration for Unicode handling
 LANG=C.UTF-8
