Improvements and added cleanup endpoint

--- a/.env.docker
+++ b/.env.docker
@@ -22,6 +22,6 @@ LOG_LEVEL=DEBUG
 # INFO - Shows sub-agent activity but includes tool-input-delta noise
 # WARN - Clean output, shows essential info and agent responses (recommended)
 # ERROR - Minimal output, only OpenCode errors
-OPENCODE_LOG_LEVEL=WARN
+OPENCODE_LOG_LEVEL=DEBUG
 
 CORS_ORIGINS=*
