--- a/.env.production
+++ b/.env.production
@@ -10,13 +10,18 @@ PORT=5001
 LANG=C.UTF-8
 LC_ALL=C.UTF-8
 
-LOG_LEVEL=INFO
+# Application Log Level (DEBUG, INFO, WARN, ERROR)
+# DEBUG - Most verbose, shows all application internals and detailed execution
+# INFO - Moderate verbosity, shows key operations and status updates
+# WARN - Shows warnings and errors only
+# ERROR - Shows only errors
+LOG_LEVEL=DEBUG
 
 # OpenCode Log Level (DEBUG, INFO, WARN, ERROR)  
 # DEBUG - Most verbose, shows all tool-input-delta and internal OpenCode details
 # INFO - Shows sub-agent activity but includes tool-input-delta noise
 # WARN - Clean output, shows essential info and agent responses (recommended)
 # ERROR - Minimal output, only OpenCode errors
-OPENCODE_LOG_LEVEL=WARN
+OPENCODE_LOG_LEVEL=DEBUG
 
 CORS_ORIGINS=*
