--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,12 @@ SESSION_ROOT=./sessions
 OPENCODE_COMMAND=opencode
 OPENCODE_CONFIG_PATH=./opencode.json
 OPENCODE_DIR=./.opencode
+
+# Node.js Dependencies Configuration
+PACKAGE_JSON_PATH=./package.json
+PACKAGE_LOCK_PATH=./package-lock.json
+NODE_MODULES_PATH=./node_modules
+
 HOST=0.0.0.0
 PORT=5001
 
